2009-05-08  reedom  <fujinaka.tohru@gmail.com>

        * [ADD] New variable `geben-version'.
        * [ADD] New command `geben-clear-breakpoints'.
        * [ADD] New custom variable `geben-query-on-clear-breakpoints'.
        * [ADD] New custom variable `geben-pause-at-entry-line'.
        * [ADD] New command `geben-toggle-pause-at-entry-line-flag'.
        * [CHG] Key bindings of `geben-set-redirect' is assigned to `>'.
        * [CHG] Key bindings of `geben-show-backtrace is also assigned to `t'.
        * [FIX] Even if you unset a breakpoint successfully in the current
                session, it was not removed from the persist storage.

2009-04-30  reedom  <fujinaka.tohru@gmail.com>

        * [ADD] Add a new command `geben-eval-current-word'.

2009-02-25  reedom  <fujinaka.tohru@gmail.com>
        
        * [FIX] With HTTP server running on Windows GEBEN failed to
                create script file copies.
        * [FIX] Now `eval' command works against PHP(Xdebug) same as
                before.
        
2009-02-07  reedom  <fujinaka.tohru@gmail.com>

        * [FIX] Suppressed unwanted focus changing: when the context
                variable buffer was visible in any window, the focus was
                moved from the debugging buffer to the context variable
                buffer after proceeding any continuous command.

2009-01-22  reedom  <fujinaka.tohru@gmail.com>

        * [FIX] Bug in Makefile: cannot byte-compile geben.el if the
                working directory is not one of the Emacs' default
                directories.
        
2009-01-10  reedom  <fujinaka.tohru@gmail.com>

        * [FIX] Implemented `geben-quit-window'
        * [FIX] Type mismatch error was occurred in breakpoint list mode
                when any breakpoint deletion was executed.
        
2009-01-08  reedom  <fujinaka.tohru@gmail.com>

        * [CHG] Redesigned.
        * [CHG] Make not to require an external DBGp client program.
        